--- a/src/main/webapp/general/getting-started.html
+++ b/src/main/webapp/general/getting-started.html
@@ -21,7 +21,7 @@
    </li>
    <li><b>Sindarin</b>
    <ul>
-       <li>Dreamingfifi’s <i><a href="https://academy.realelvish.net/store/">A Fan’s Guide to Neo-Sindarin</a></i></li>
+       <li>Fiona Jalling’s <i><a href="https://academy.realelvish.net/store/">A Fan’s Guide to Neo-Sindarin</a></i></li>
        <li>Thorsten Renk’s <i><a href="http://www.science-and-fiction.org/bookstore.html#pedin_edhellen">Pedin Edhellen</a></i></li>
        <li>Xandarien’s <i><a href="http://sindarinlessons.weebly.com/">Sindarin Lessons</a></i></li>
    </ul>
@@ -56,7 +56,7 @@
 </center>
 <p>Second, while this lexicon provides Elvish-to-English translations, it does not provide a reverse dictionary of English-to-Elvish. Given Tolkien’s shifting linguistic conceptions, it can be difficult to pin down an exact English translation of many of his Elvish words. Furthermore, given the sparsity of the available Elvish vocabulary, there are many English words for which there is no Elvish equivalent. Often you will need to search for Elvish words that are similar to your intended meaning if you cannot find an exact match. There are several ways you can look for the Elvish translation of an English word in this lexicon:</p>
 <ol type="A">
-<li>Use your browser’s search function in the word lists to locate an appropriate English word, considering that there may be multiple Elvish words that match a given English word, and that you may need to search for similar words if you cannot find an exact match.</li>
+<li>Use your browser’s search function in the word lists to find an appropriate English word, considering that there may be multiple Elvish words that match a given English word, and that you may need to search for similar words if you cannot find an exact match.</li>
 <li>Look at the semantic categorization of Elvish words, which group Elvish words with similar meanings together (TBD - semantic categorization is currently a work in progress).
 <ul>
    <li><b><a href="../content/category-indexes/categories-nq.html">Quenya Semantic Categories</a></b>
