--- a/src/main/webapp/general/getting-started.html
+++ b/src/main/webapp/general/getting-started.html
@@ -10,7 +10,7 @@
 <p>[<a href="../index.html">Home</a>]</p>
 <hr>
 <h1>Getting Started</h1>
-<p>This document is aimed at readers who are relatively inexperienced with Tolkien’s Elvish Languages. More knowledgeable readers may wish to start with the discussion of the <a href="motivations-and-methodology.html">Motivations and Methodology</a> of this lexicon.</p>
+<p>This document is aimed at readers who are relatively inexperienced with Tolkien’s Elvish Languages. More knowledgeable readers may wish to start with the discussion in the <a href="motivations-and-methodology.html">Motivations and Methodology</a> essay of this lexicon.</p>
 <p>Although this lexicon contains a great deal of Elvish vocabulary, it is not intended to be a teaching tool for learning the Elvish languages. If this is something you are interested in, I suggest you look at the various Elvish course available online, for example:</p>
 <ul>
    <li><b>Quenya</b>
@@ -56,16 +56,15 @@
 </center>
 <p>Second, while this lexicon provides Elvish-to-English translations, it does not provide a reverse dictionary of English-to-Elvish. Given Tolkien’s shifting linguistic conceptions, it can be difficult to pin down an exact English translation of many of his Elvish words. Furthermore, given the sparsity of the available Elvish vocabulary, there are many English words for which there is no Elvish equivalent. Often you will need to search for Elvish words that are similar to your intended meaning if you cannot find an exact match. There are several ways you can look for the Elvish translation of an English word in this lexicon:</p>
 <ol type="A">
-<li>Use your browser’s search function in the word lists to find an appropriate English word, considering that there may be multiple Elvish words that match a given English word, and that you may need to search for similar words if you cannot find an exact match.</li>
+<li>Use the <b><a href="../content/search/search.html">Search</a></b> feature of the lexicon.</li>
 <li>Look at the semantic categorization of Elvish words, which group Elvish words with similar meanings together (TBD - semantic categorization is currently a work in progress).
 <ul>
    <li><b><a href="../content/category-indexes/categories-nq.html">Quenya Semantic Categories</a></b>
    <li><b><a href="../content/category-indexes/categories-ns.html">Sindarin Semantic Categories</a></b>
 </ul>
 </li>
-<li>Use the <b><a href="../content/search/search.html">Search</a></b> feature of the lexicon.</li>
 </ol>
-<p>Third, you should bear in mind that Tolkien’s motivations for creating his Elvish languages were primarily artistic and aesthetic, and as such he never intended to “finish” the languages in a way that would allow them to be spoken, as you might expect with other invented languages such as Esperanto. For a discussion of the incomplete nature of the Elvish languages, see Carl Hostetter’s article on “<a href="http://www.elvish.org/articles/EASIS.pdf">Elvish as She Is Spoke</a>” on the <a href="http://www.elvish.org">Elvish Linguistic Fellowship</a> web site.</p>
+<p>Third, you should bear in mind that Tolkien’s motivations for creating his Elvish languages were primarily artistic and aesthetic, and as such he never intended to “finish” the languages in a way that would allow them to be spoken. For a discussion of the incomplete nature of the Elvish languages, see Carl Hostetter’s article on “<a href="http://www.elvish.org/articles/EASIS.pdf">Elvish as She Is Spoke</a>” on the <a href="http://www.elvish.org">Elvish Linguistic Fellowship</a> web site.</p>
 <p>Finally, given the uncertain and ever-evolving nature of Elvish vocabulary and grammar, all interpretations of Tolkien’s languages are necessarily subjective, including those in this lexicon. In fact, many of these interpretations (again including this lexicon) are better designated as “Neo-Quenya” or “Neo-Sindarin”, which means they are extrapolations from Tolkien’s work rather than a precise representation of them. For a more nuanced understanding of the Elvish languages, you may wish to compare the vocabulary appearing in this lexicon with those in other Elvish word lists (TBD - this is doubly true given the current draft nature of this lexicon):</p>
 <ul>
    <li><b>Quenya</b> - Helge Fauskanger’s <i><a href="http://folk.uib.no/hnohf/wordlists.htm">Quettaparma Quenyallo</a></i></li>
