--- a/src/main/webapp/general/version-history.html
+++ b/src/main/webapp/general/version-history.html
@@ -10,7 +10,11 @@
 <p>[<a href="../index.html">Home</a>]</p>
 <hr>
 <h1>Version History</h1>
-<p>v0.6.6</p>
+<p>v0.6.7</p>
+<ul>
+<li>More evaluating roots for exclusion and inclusion in Neo-Eldarin (M-Q).</li>
+</ul>
+<p>v0.6.6 (June 6, 2018)</p>
 <ul>
 <li>More evaluating roots for exclusion and inclusion in Neo-Eldarin (I-M).</li>
 <li>Removed “⏳” and “⛔️” symbols for neologisms since they weren’t very helpful.</li>
