--- a/src/main/webapp/translations/international-searches.html
+++ b/src/main/webapp/translations/international-searches.html
@@ -5,6 +5,7 @@
     <meta http-equiv="Content-Style-Type" content="text/css">
     <title>Eldamo : International Searches</title>
     <link rel="stylesheet" type="text/css" href="../css/global.css">
+    <script src="../js/add-queries.js"></script>
 </head>
 <body>
 <p>[<a href="../index.html">Home</a>]</p>
@@ -15,10 +16,10 @@
 are not yet available. All data has been made available via the same <a href="http://creativecommons.org/licenses/by/4.0/">
 Creative Commons</a> license as the rest of Eldamo from the translators.</p>
 <dl>
-<dt><a href="../content/search/search.html?trans=russian">Русский (Russian)</a>
+<dt><a href="../content/search/search.html" query="trans=russian">Русский (Russian)</a>
 [<a href="eldamo-russian.txt">Data File</a>]</dt>
 <dd>© 2018, Dmytro Yakymets (Дмитрий Якимец).</dd>
-<dt><a href="../content/search/search.html?trans=polish">Polski (Polish)</a>
+<dt><a href="../content/search/search.html" query="trans=polish">Polski (Polish)</a>
 [<a href="eldamo-polish.txt">Data File</a>]</dt>
 <dd>© 2018, Przemek Chorobiński.</dd>
 </dl>
