--- a/src/main/webapp/general/version-history.html
+++ b/src/main/webapp/general/version-history.html
@@ -10,10 +10,15 @@
 <p>[<a href="../index.html">Home</a>]</p>
 <hr>
 <h1>Version History</h1>
-<p>v0.6.8</p>
+<p>v0.6.9</p>
 <ul>
-<li>Finish evaluating roots for exclusion and inclusion in Neo-Eldarin.</li>
-<li>Clean up rules for Sindarin i-affection using the work of Elaran (Ekin Gören).</li>
+<li>First pass at including neologisms from <a href="../content/references/index.html#Neologisms">other sources</a>
+(1000W, ABNW, FJNQ, FJNS, NQW, PPQ, PPW, TFC, VLDS, VQP).</li>
+</ul>
+<p>v0.6.8 (September 5, 2018)</p>
+<ul>
+<li>Finished evaluating roots for exclusion and inclusion in Neo-Eldarin.</li>
+<li>Cleaned up rules for Sindarin i-affection using the work of Elaran (Ekin Gören).</li>
 <li>Restored Gentium as the font used for the Eldamo site.</li>
 </ul>
 <p>v0.6.7 (August 3, 2018)</p>
