--- a/src/main/webapp/general/version-history.html
+++ b/src/main/webapp/general/version-history.html
@@ -10,7 +10,14 @@
 <p>[<a href="../index.html">Home</a>]</p>
 <hr>
 <h1>Version History</h1>
-<p>v0.6.9</p>
+<p>v0.7.0</p>
+<ul>
+<li>Second pass at including neologisms from <a href="../content/references/index.html#Neologisms">other sources</a>
+(GS, FGNS, AESED, NQNT).</li>
+<li>Better separation of Neo-Eldarin and Academic modes, masking Neo-Eldarin relationships unless in Neo-mode.</li>
+<li>First pass at semantic mapping for Quenya words.</li>
+</ul>
+<p>v0.6.9 (September 29, 2018)</p>
 <ul>
 <li>First pass at including neologisms from <a href="../content/references/index.html#Neologisms">other sources</a>
 (1000W, ABNW, FJNQ, FJNS, NQW, PPQ, PPW, TFC, VLDS, VQP).</li>
