--- a/src/main/webapp/general/getting-started.html
+++ b/src/main/webapp/general/getting-started.html
@@ -15,8 +15,9 @@
 <ul>
    <li><b>Quenya</b>
    <ul>
-       <li>Helge Fauskanger’s <i><a href="http://folk.uib.no/hnohf/qcourse.htm">Quenya Course</a></i></li>
+       <li>Helge Fauskanger’s <i><a href="http://folk.uib.no/hnohf/lessons.rtf">Quenya Course</a></i></li>
        <li>Thorsten Renk’s <i><a href="http://www.science-and-fiction.org/bookstore.html#lambe_eldaiva">Quetin i lambë eldaiva</a></i></li>
+       <li>Tamas Ferencz’s <i><a href="https://middangeard.org.uk/atanquesta/">Atanquesta</a></i></li>
    </ul>
    </li>
    <li><b>Sindarin</b>
