--- a/src/main/webapp/general/version-history.html
+++ b/src/main/webapp/general/version-history.html
@@ -10,7 +10,11 @@
 <p>[<a href="../index.html">Home</a>]</p>
 <hr>
 <h1>Version History</h1>
-<p>v0.7.1</p>
+<p>v0.7.2</p>
+<ul>
+<li>Analyzed Sindarin phonetics.</li>
+</ul>
+<p>v0.7.1 (December 28, 2018)</p>
 <ul>
 <li>Analyzed Ancient Telerin and Old Sindarin phonetics.</li>
 </ul>
