--- a/src/main/webapp/general/version-history.html
+++ b/src/main/webapp/general/version-history.html
@@ -10,7 +10,13 @@
 <p>[<a href="../index.html">Home</a>]</p>
 <hr>
 <h1>Version History</h1>
-<p>v0.7.2</p>
+<p>v0.7.3</p>
+<ul>
+<li>Began analysis of Quenya phonetics: mostly basic research.</li>
+<li>Added the Middle Ancient Quenya (ᴹAQ.) language.</li>
+<li>Began collecting very minor sources: Auct-Let for Tolkien’s letters sold at auction.</li>
+</ul>
+<p>v0.7.2 (April 5, 2019)</p>
 <ul>
 <li>Analyzed Sindarin phonetics.</li>
 </ul>
