--- a/src/main/webapp/general/version-history.html
+++ b/src/main/webapp/general/version-history.html
@@ -10,7 +10,11 @@
 <p>[<a href="../index.html">Home</a>]</p>
 <hr>
 <h1>Version History</h1>
-<p>v0.7.3</p>
+<p>v0.7.4</p>
+<ul>
+<li>Finished analysis of Quenya phonetics.</li>
+</ul>
+<p>v0.7.3 (July 27, 2019)</p>
 <ul>
 <li>Began analysis of Quenya phonetics: mostly basic research.</li>
 <li>Added the Middle Ancient Quenya (ᴹAQ.) language.</li>
