--- a/src/main/webapp/translations/international-searches.html
+++ b/src/main/webapp/translations/international-searches.html
@@ -21,7 +21,7 @@ Creative Commons</a> license as the rest of Eldamo from the translators.</p>
 <dd>© 2018, Dmytro Yakymets (Дмитрий Якимец).</dd>
 <dt><a href="../content/search/search.html" query="trans=polish">Polski (Polish)</a>
 [<a href="eldamo-polish.txt">Data File</a>]</dt>
-<dd>© 2018, Przemek Chorobiński.</dd>
+<dd>© 2018-2019, Przemek Chorobiński, Orondil.</dd>
 </dl>
 </body>
 </html>
