--- a/src/main/webapp/general/version-history.html
+++ b/src/main/webapp/general/version-history.html
@@ -10,7 +10,14 @@
 <p>[<a href="../index.html">Home</a>]</p>
 <hr>
 <h1>Version History</h1>
-<p>v0.7.4</p>
+<p>v0.7.5</p>
+<ul>
+<li>Began Quenya grammar analysis (general information and noun cases).</li>
+<li>Data entry from VT28 and V36 (Bodleian Declension and Entu, Ensi, Enta Declension).</li>
+<li>More data entry from PE14 (Valmaric script section).</li>
+<li>Began semantic categorization of Sindarin/Noldorin/Gnomish.</li>
+</ul>
+<p>v0.7.4 (October 25, 2019)</p>
 <ul>
 <li>Finished analysis of Quenya phonetics.</li>
 </ul>
