--- a/src/main/webapp/general/version-history.html
+++ b/src/main/webapp/general/version-history.html
@@ -10,7 +10,13 @@
 <p>[<a href="../index.html">Home</a>]</p>
 <hr>
 <h1>Version History</h1>
-<p>v0.7.5</p>
+<p>v0.7.6</p>
+<ul>
+<li>Changed search so that help text is displayed by default, then hidden when search starts.</li>
+<li>More Quenya grammar analysis (pronouns and verbs).</li>
+<li>Continued semantic categorization of Sindarin/Noldorin/Gnomish.</li>
+</ul>
+<p>v0.7.5 (January 17, 2020)</p>
 <ul>
 <li>Began Quenya grammar analysis (general information and noun cases).</li>
 <li>Data entry from VT28 and V36 (Bodleian Declension and Entu, Ensi, Enta Declension).</li>
