--- a/src/main/webapp/general/version-history.html
+++ b/src/main/webapp/general/version-history.html
@@ -10,7 +10,12 @@
 <p>[<a href="../index.html">Home</a>]</p>
 <hr>
 <h1>Version History</h1>
-<p>v0.7.8</p>
+<p>v0.7.9</p>
+<ul>
+<li>Started dictionary entries for Primitive Elvish roots: √A - √MUY.</li>
+<li>Continued semantic categorization of Sindarin/Noldorin/Gnomish.</li>
+</ul>
+<p>v0.7.8 (November 28, 2020)</p>
 <ul>
 <li>First stab at Sindarin grammar analysis.</li>
 <li>Continued semantic categorization of Sindarin/Noldorin/Gnomish.</li>
