--- a/src/main/webapp/general/version-history.html
+++ b/src/main/webapp/general/version-history.html
@@ -10,7 +10,11 @@
 <p>[<a href="../index.html">Home</a>]</p>
 <hr>
 <h1>Version History</h1>
-<p>v0.8.0</p>
+<p>v0.8.1</p>
+<ul>
+<li>Dictionary entries for semantic category 1 = Physical World.</li>
+</ul>
+<p>v0.8.0 (October 20, 2021)</p>
 <ul>
 <li>Added information from <i>The Nature of Middle Earth</i>.</li>
 <li>Finished dictionary entries for Primitive Elvish roots: √N - √YUR.</li>
