--- a/src/main/webapp/general/version-history.html
+++ b/src/main/webapp/general/version-history.html
@@ -10,7 +10,11 @@
 <p>[<a href="../index.html">Home</a>]</p>
 <hr>
 <h1>Version History</h1>
-<p>v0.8.1</p>
+<p>v0.8.2</p>
+<ul>
+<li>Dictionary entries for semantic category 2 = Mankind.</li>
+</ul>
+<p>v0.8.1 (January 24, 2022)</p>
 <ul>
 <li>Dictionary entries for semantic category 1 = Physical World.</li>
 </ul>
