--- a/src/main/webapp/general/terminology-and-notations.html
+++ b/src/main/webapp/general/terminology-and-notations.html
@@ -30,7 +30,7 @@
 <p><b>Period Notations</b></p>
 <ul>
 <li>See the <a href="conceptual-history.html">Conceptual History of Elvish</a> for the time periods designations used in this lexicon</li>
-<li>ᴱ superscript marks Early Period forms: ᴱQ. = Early Quenya</li>
+<li>ᴱ superscript marks Early Period forms: ᴱQ. = Early Qenya</li>
 <li>ᴹ superscript marks Middle Period forms: ᴹQ. = Middle Quenya</li>
 <li>Unmarked languages that span multiple periods are late forms: Q. = Late Quenya</li>
 <li>Languages that appear primarily in a single period have no period marker for that period: N. = Noldorin (Middle Period)</li>
