--- a/src/main/webapp/general/version-history.html
+++ b/src/main/webapp/general/version-history.html
@@ -10,7 +10,15 @@
 <p>[<a href="../index.html">Home</a>]</p>
 <hr>
 <h1>Version History</h1>
-<p>v0.8.2</p>
+<p>v0.8.4</p>
+<ul>
+<li>Dictionary entries for semantic category 4 = Body Parts and Functions.</li>
+</ul>
+<p>v0.8.3 (May 15, 2022)</p>
+<ul>
+<li>Dictionary entries for semantic category 3 = Animals.</li>
+</ul>
+<p>v0.8.2 (March 13, 2022)</p>
 <ul>
 <li>Dictionary entries for semantic category 2 = Mankind.</li>
 </ul>
@@ -20,7 +28,7 @@
 </ul>
 <p>v0.8.0 (October 20, 2021)</p>
 <ul>
-<li>Added information from <i>The Nature of Middle Earth</i>.</li>
+<li>Added information from <i>The Nature of Middle-earth</i>.</li>
 <li>Finished dictionary entries for Primitive Elvish roots: √N - √YUR.</li>
 <li>Add semantic category link to word pages.</li>
 <li>Finished semantic categorization of Sindarin/Noldorin/Gnomish.</li>
@@ -305,7 +313,7 @@ are treated as Neo-Quenya or Neo-Sindarin, even if the form itself is unchanged.
 <ul>
 <li>Initial release to Sourceforge.</li>
 <li>Major structural definitions of XML data model established, but not yet formalized.</li>
-<li>Data from <i>The Lord of the Rings</i>, <i>The Silmarillion</i>, <i>The Unfinished Tales</i> and <i>The History of Middle Earth</i> series.</li>
+<li>Data from <i>The Lord of the Rings</i>, <i>The Silmarillion</i>, <i>The Unfinished Tales</i> and <i>The History of Middle-earth</i> series.</li>
 <li>Data from <i>The Road Goes Ever On</i>, <i>Letters of J.R.R. Tolkien</i> and <i> The Lord of the Rings: a Reader’s Companion</i>.</li>
 <li>Most original linguistic data from <i>Vinyar Tengwar</i> issues, excluding VT27 and VT50.</li>
 <li>Vocabulary from “Words, Phrases and Passages from <i>The Lord of the Rings</i>” (PE17), <i>Qenya Lexicon</i> (PE12) and <i>Gnomish Lexicon</i> (the last A - S only).</li>
